pkg/front_end/testcases/inference/infer_from_variables_in_non_cycle_imports_with_flag.dart.strong.expect
library test;
import self as self;
import "./infer_from_variables_in_non_cycle_imports_with_flag_a.dart" as inf;
import "dart:core" as core;

static field core::int y = inf::x;
static method test1() → dynamic {
  inf::x = let final dynamic #t1 = "hi" in let dynamic _ = null in invalid-expression "pkg/front_end/testcases/inference/infer_from_variables_in_non_cycle_imports_with_flag.dart:13:36: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.
Try changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.
  x = /*error:INVALID_ASSIGNMENT*/ \"hi\";
                                   ^";
  self::y = let final dynamic #t2 = "hi" in let dynamic _ = null in invalid-expression "pkg/front_end/testcases/inference/infer_from_variables_in_non_cycle_imports_with_flag.dart:14:36: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.
Try changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.
  y = /*error:INVALID_ASSIGNMENT*/ \"hi\";
                                   ^";
}
static method main() → dynamic {}
